sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:8: error: not found: value swapped
		swapped=false
                ^AlgBubbleSort3:12: error: not found: value swapped
			swapped=true
                        ^AlgBubbleSort3:14: error: not found: value swapped
		else if (swapped==true)
                         ^